[package]
name = "mp3-duration"
version = "0.1.9"
edition = '2018'
description = "A library for measuring the playback duration of mp3 files"
repository = "https://github.com/agersant/mp3-duration"
readme = "README.md"
keywords = ["mp3", "duration", "audio", "metadata", "parser"]
categories = ["multimedia::audio"]
license = "MIT"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
exclude = [
    "test/*",
]

[badges]
travis-ci = { repository = "agersant/mp3-duration", branch = "master" }

[dependencies]
failure = "0.1.5"
